# Group-C

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  theme.ts
frontend/src/components/Robots/: CommandInput.tsx  HistoryLog.tsx  MoveControl.tsx  RobotCard.tsx  RobotList.tsx
frontend/src/components/commons/: _404NotFound.tsx
frontend/src/config/apis/: endpoint.ts  header.ts  index.ts  payload.ts
frontend/src/config/router/: index.ts
frontend/src/containers/AppLayout/: AppLayout.tsx
frontend/src/containers/Navbar/: Navbar.tsx
frontend/src/hooks/: useResponsive.ts  useRobotControl.ts
frontend/src/pages/: routers.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Home/components/: MemberCard.tsx
frontend/src/pages/RobotDetails/: RobotDetails.tsx
frontend/src/pages/RobotsManagement/: index.tsx
frontend/src/redux/: reducer.ts  store.ts
frontend/src/types/models/: index.ts  robot.ts
frontend/src/utils/: api.ts  helpers.ts
robosistance/: .gitignore  Cargo.toml  Rocket.toml  package-lock.json
robosistance/src/: main.rs  robot_endpoints.rs  routes.rs
robosistance/src/db/: mod.rs  models.rs  mongodb.rs  mongodb_robot.rs  robot_model.rs
robosistance/src/endpoints/: db.rs  mod.rs  robot.rs  ui.rs
robosistance/src/models/: mod.rs  robot_model.rs
robot/: control.py  main.py  stream.py  turning.py
robot/src/: camera.py  control.py  event.py  movement.py  patrol.py  robot.py  stream.py
robot/test/: connection.py
(+1 files in other folders)
